# sygnal

./: .git-blame-ignore-revs  .gitattributes  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  repos.yaml
.config/: clang-format  copyright.txt
.github/workflows/: build.yml  pre-commit.yml
Clients/LEV02-01/: Interface Layout and Procedure.md
dbc/cb/: Heartbeat.dbc
dbc/cb/niro_dcan/: batterySOC.dbc  tpms.dbc
dbc/io/: Configuration.dbc  Control.dbc
dbc/mcm/: Configuration.dbc  Relay.dbc
mvec/mvec_lib/: CMakeLists.txt  README.md  package.xml
mvec/mvec_lib/include/: mvec_relay.hpp
mvec/mvec_lib/include/mvec_lib/: can_bitwork.hpp  j1939_id.hpp  mvec_constants.hpp  mvec_error_status_message.hpp  mvec_fuse_status_message.hpp  mvec_population_reply.hpp  mvec_relay.hpp  mvec_relay_command_reply.hpp  mvec_relay_query_reply.hpp  mvec_relay_socketcan.hpp  mvec_relay_status_message.hpp  mvec_response_parser.hpp  mvec_status_messages.hpp
mvec/mvec_lib/include/mvec_lib/core/: can_bitwork.hpp  j1939_id.hpp  mvec_constants.hpp  mvec_status_messages.hpp
mvec/mvec_lib/include/mvec_lib/responses/: mvec_population_reply.hpp  mvec_relay_command_reply.hpp  mvec_relay_query_reply.hpp  mvec_response_base.hpp
mvec/mvec_lib/include/mvec_lib/status_messages/: mvec_error_status_message.hpp  mvec_fuse_status_message.hpp  mvec_relay_status_message.hpp
mvec/mvec_lib/src/: mvec_error_status_message.cpp  mvec_fuse_status_message.cpp  mvec_population_reply.cpp  mvec_relay.cpp  mvec_relay_command_reply.cpp  mvec_relay_query_reply.cpp  mvec_relay_socketcan.cpp  mvec_relay_status_message.cpp  mvec_response_parser.cpp  mvec_status_messages.cpp
mvec/mvec_lib/src/core/: mvec_status_messages.cpp
mvec/mvec_lib/src/responses/: mvec_population_reply.cpp  mvec_relay_command_reply.cpp  mvec_relay_query_reply.cpp  mvec_response_base.cpp
mvec/mvec_lib/src/status_messages/: mvec_error_status_message.cpp  mvec_fuse_status_message.cpp  mvec_relay_status_message.cpp
mvec/mvec_lib/test/: mvec_relay.cpp  mvec_relay_socketcan.cpp  mvec_socketcan_hardware.cpp  status_enums.cpp  status_messages.cpp  test_mvec_relay.cpp  test_mvec_socketcan_hardware.cpp  test_status_enums.cpp  test_status_messages.cpp
mvec/mvec_msgs/: CMakeLists.txt  package.xml
mvec/mvec_msgs/msg/: ErrorStatus.msg  FuseStatus.msg  MvecFeedback.msg  PopulationStatus.msg  Preset.msg  Relay.msg  RelayQuery.msg  RelayStatus.msg
mvec/mvec_msgs/srv/: SetMultiRelay.srv  SetRelayState.srv  SetSingleRelay.srv  TriggerPreset.srv
mvec/mvec_node/: CMakeLists.txt  README.md  package.xml
mvec/mvec_node/config/: relay_presets.yaml
mvec/mvec_node/include/mvec_node/: mvec_node.hpp
mvec/mvec_node/launch/: mvec_bridge_launch.py
mvec/mvec_node/src/: main.cpp  mvec_node.cpp
mvec/mvec_ros2/: CMakeLists.txt  README.md  package.xml
mvec/mvec_ros2/config/: relay_presets.yaml
mvec/mvec_ros2/include/mvec_ros2/: mvec_node.hpp
mvec/mvec_ros2/launch/: mvec_bridge_launch.py
mvec/mvec_ros2/src/: mvec_node.cpp
sygnal_can_interface/sygnal_can_interface_lib/: CMakeLists.txt  README.md  package.xml
sygnal_can_interface/sygnal_can_interface_lib/include/sygnal_can_interface_lib/: crc8.hpp  sygnal_command_interface.hpp  sygnal_hpo_interface.hpp  sygnal_interface_socketcan.hpp  sygnal_mcm_interface.hpp
sygnal_can_interface/sygnal_can_interface_lib/src/: crc8.cpp  sygnal_command_interface.cpp  sygnal_hpo_interface.cpp  sygnal_interface_socketcan.cpp  sygnal_mcm_interface.cpp
sygnal_can_interface/sygnal_can_interface_lib/test/: sygnal_command_interface_test.cpp  sygnal_hpo_interface_test.cpp  sygnal_identify_test.cpp  sygnal_interface_socketcan_routing_test.cpp  sygnal_interface_socketcan_test.cpp  sygnal_mcm_interface_test.cpp
sygnal_can_interface/sygnal_can_interface_ros2/: CMakeLists.txt  package.xml
sygnal_can_interface/sygnal_can_interface_ros2/include/sygnal_can_interface_ros2/: sygnal_can_interface_node.hpp
sygnal_can_interface/sygnal_can_interface_ros2/launch/: sygnal_can_interface_launch.py
sygnal_can_interface/sygnal_can_interface_ros2/src/: sygnal_can_interface_node.cpp  sygnal_can_interface_params.yaml
sygnal_can_interface/sygnal_can_msgs/: CMakeLists.txt  package.xml
sygnal_can_interface/sygnal_can_msgs/msg/: ControlCommand.msg  McmHeartbeat.msg  McmIdentity.msg
sygnal_can_interface/sygnal_can_msgs/srv/: QueryIdentities.srv  SendControlCommand.srv  SendRelayCommand.srv  SetControlState.srv
sygnal_dbc/: CMakeLists.txt  README.md  package.xml
sygnal_dbc/cmake/: sygnal_dbc-extras.cmake
sygnal_dbc/database/cb/: Configuration.dbc
sygnal_dbc/database/cb/niro_dcan/: door_seatbelt_state.dbc  dtc.dbc
sygnal_dbc/database/hpo/: Commissioning.dbc  Configuration.dbc  Control.dbc  Error.dbc  Heartbeat.dbc  Identify.dbc
sygnal_dbc/database/io/: Commissioning.dbc  Configuration.dbc  Control.dbc  Error.dbc  Heartbeat.dbc  Identify.dbc
sygnal_dbc/database/mcm/: Control.dbc  Fault.dbc  Heartbeat.dbc  OSCC.dbc  Override.dbc  Report.dbc
sygnal_dbc/database/vehicles/: hyundai_kia_generic.dbc
sygnal_dbc/test/: test_mcm_heartbeat.cpp  test_mcm_heartbeat.py  test_mcm_heartbeat_decode.py  test_mcm_heartbeat_decode_catch2.cpp
sygnal_fault_clear/: CMakeLists.txt  package.xml
sygnal_fault_clear/include/sygnal_fault_clear/: fault_clear_node.hpp
sygnal_fault_clear/launch/: fault_clear_launch.py
sygnal_fault_clear/src/: fault_clear_node.cpp  main.cpp
