<?xml version="1.0"?>
<package format="3">
  <name>sygnal_dbc</name>
  <version>0.0.0</version>
  <description>DBC database package for Sygnal. Installs DBC files and exposes SYGNAL_DBC_DIR for consumers.</description>
  <maintainer email="engineering@polymathrobotics.com">Polymath Engineering</maintainer>
  <license>Apache-2.0</license>
  <author email="zeerekahmad@hotmail.com">Zeerek Ahmad</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>python3-cantools-pip</buildtool_depend>

  <test_depend>ament_cmake_pytest</test_depend>
  <test_depend>ament_cmake_catch2</test_depend>
  <test_depend>ament_index_python</test_depend>
  <test_depend>catch2</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
