<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mvec_lib</name>
  <version>0.0.0</version>
  <description>Library for Interfacing with an MVEC Relay using Socketcan Adapter</description>
  <maintainer email="engineering@polymathrobotics.com">Polymath Engineering</maintainer>
  <license>Apache-2.0</license>
  <author email="zeerekahmad@hotmail.com">Zeerek Ahmad</author>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <depend>socketcan_adapter</depend>
  <!-- TODO(Zeerek): Socketcan adapter dependencies-->
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>rclcpp_components</depend>
  <depend>can_msgs</depend>

  <test_depend>ament_cmake_test</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
