<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sygnal_can_interface_lib</name>
  <version>0.0.0</version>
  <description>Library for interfacing with Sygnal MCM over CAN using Socketcan Adapter</description>
  <maintainer email="engineering@polymathrobotics.com">Polymath Engineering</maintainer>
  <license>Apache-2.0</license>
  <author email="zeerekahmad@hotmail.com">Zeerek Ahmad</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>socketcan_adapter</depend>
  <depend>sygnal_dbc</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
